# paperresearchagent

./: .dockerignore  .env.example  .gitignore  ACTION_RECOMMENDATIONS.md  AUTOMATED_TEST_REPORT.md  AWS_SETUP_GUIDE.md  BROWSER_TESTING_REPORT.md  BROWSER_TESTING_SUMMARY.md  BROWSER_USER_TESTING_GUIDE.md  CLAUDE.md  COMPARE_NVIDIA_SETUP.md  COMPLETE_USER_TESTING_REPORT.md  COMPLETE_VALIDATION_GUIDE.md  COMPREHENSIVE_USER_TESTING.md  CURRENT_STATUS.md  DENARIO_ACTIVATION_GUIDE.md  DENARIO_ACTIVATION_SUCCESS.md  DEPENDENCY_INSTALL_FIX.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOY_README.md  DOCKER_TESTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_TESTING_CONSOLIDATION.md  Dockerfile.mock-embedding-nim  Dockerfile.mock-reasoning-nim  Dockerfile.orchestrator  Dockerfile.ui  EKS_MANAGEMENT_GUIDE.md  EKS_TESTING_REPORT.md  ENHANCEMENT_COMPLETE.md  ENHANCEMENT_PROGRESS.md  ERROR_FIXES_APPLIED.md  FEATURES_NOT_PORTED_TO_LOCAL.md  FEATURE_STATUS.md  FEATURE_STATUS_REPORT.md  FIX_403.md  GET_NGC_KEY.md  HACKATHON_DEMO_CHECKLIST.md  HACKATHON_SETUP_GUIDE.md  (+55 more)
.serena/: project.yml
archive/: ALL_FEATURES_COMPLETE.md  ARCHIVE_INDEX.md  DELIVERABLES_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_2025-01-15.md  DOCUMENTATION_CONSOLIDATION_2025-01-16.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_FIXES_APPLIED.md  DOCUMENTATION_REVIEW.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  MULTI_SOURCE_IMPLEMENTATION.md  NEXT_STEPS.md  NEXT_STEPS_COMPLETED.md  QUOTA_ISSUES_SUMMARY.md  README.md  REMAINING_FEATURES_COMPLETED.md  SETUP_STATUS.md  SUBMISSION_REVIEW.md  TEMP_FILES_ARCHIVED_2025-01-16.md  UX_IMPROVEMENTS_SUMMARY.md  WINNING_STRATEGY.md
claudedocs/: UX_ANALYSIS_SUMMARY.md  UX_AUDIT_DASHBOARD.md  UX_AUDIT_INDEX.md  UX_ENHANCEMENT_ANALYSIS.md  UX_QUICK_WINS_CHECKLIST.md  hero_section_layout.md  phase1_ux_implementation_summary.md  priority2_implementation_summary.md  ux_audit_comprehensive.md  ux_implementation_guide.md  ux_wireframes_visual.md
docs/: API_KEYS_SETUP.md  Architecture_Diagrams.md  DISASTER_RECOVERY.md  EKS_vs_SageMaker_Comparison.md  ENV_SETUP.md  GET_NGC_KEY.md  MONITORING_AND_ALERTING.md  PAPER_SOURCES.md  PRODUCTION_DEPLOYMENT.md  Phase2.2_Progressive_Disclosure_Summary.md  README.md  (+2 more)
(+269 files in other folders)
